--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ certifi==2023.07.22
 chardet==3.0.4
 defusedxml==0.6.0
 dj-database-url==0.5.0
-Django==3.2.21
+Django==3.2.23
 django-bootstrap3==15.0.0
 django-filter==2.4.0
 django-ha-hardware @ git+https://github.com/hackupc/hardware.git@c07aa873d8785ecbae06692b430afb6f29207854
 django-multiselectfield==0.1.12
-django-storages @ git+https://github.com/jschneier/django-storages.git@b116e3a235323144cda6d3cc5a5cb27baf076ee2
+django-storages==1.9.1
 django-tables2==2.4.0
 djangorestframework==3.12.4
 django-jwt-oidc==1.0.10
@@ -31,7 +31,7 @@ odfpy==1.4.0
 openpyxl==2.6.4
 packaging==16.8
 psycopg2-binary~=2.8.3
-Pillow==9.3.0
+Pillow==10.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.1
 pycodestyle==2.7.0
